fixed collapse icons to not show in desktop mode

--- a/styles/shop/filter.module.css
+++ b/styles/shop/filter.module.css
@@ -143,6 +143,14 @@
     box-shadow: 0px 2px 4px 1.5px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
   }
 
+  .filter-section h3{
+    margin-bottom: 0;
+  }
+
+  .filter-categories {
+    margin-top: 0;
+  }
+
   .filter-category {
     
     border-bottom: 0.5px solid var(--grey);
@@ -187,4 +195,7 @@
     color: var(--primary-color);
   }
   
+  .collapse-icon {
+    display:none;
+  }
 }
